Zoom to Mouse Position is broken in Node Editor (with Trackpad, macOS) #78211

Closed
opened 2020-06-24 17:00:02 +02:00 by Yevgeny Makarov · 19 comments

System Information
Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.24

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-18 19:05, hash: b89898cbd3
Broken: 2.79b, 2.8x

Short description of error

  • if the "Zoom to Mouse Position" preference is enabled
  • in the Node Editor
  • zooming with Cmd + Trackpad Pan or Trackpad Zoom
  • always zooms to the center of the canvas, it is almost impossible to zoom

trackpad-zoom-node-editor.mov

**System Information** Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.24 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-18 19:05, hash: `b89898cbd3` Broken: 2.79b, 2.8x **Short description of error** - if the "Zoom to Mouse Position" preference is enabled - in the Node Editor - zooming with `Cmd + Trackpad Pan` or `Trackpad Zoom` - always zooms to the center of the *canvas*, it is almost impossible to zoom [trackpad-zoom-node-editor.mov](https://archive.blender.org/developer/F8640760/trackpad-zoom-node-editor.mov)
Author
Member

Added subscriber: @jenkm

Added subscriber: @jenkm

#70749 was marked as duplicate of this issue

#70749 was marked as duplicate of this issue
Yevgeny Makarov self-assigned this 2020-08-09 23:28:59 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Although I cannot test, I assume this can be confirmed and called a bug :)

Although I cannot test, I assume this can be confirmed and called a bug :)

Added subscriber: @Nisim

Added subscriber: @Nisim

I experienced it as well in 2.83.4.

I experienced it as well in 2.83.4.

One thing I notice now about this bug is when you do zoom by the '+' button on the Numpad part (right keyboard part) you do get the correct zooming to the mouse location. it only occurs when using the Cmd+Mouse Scroll when it ignores the mouse location.

One thing I notice now about this bug is when you do zoom by the '+' button on the Numpad part (right keyboard part) you do get the correct zooming to the mouse location. it only occurs when using the Cmd+Mouse Scroll when it ignores the mouse location.
Author
Member

Added subscribers: @GabrielMoro, @robbott, @WilliamReynish

Added subscribers: @GabrielMoro, @robbott, @WilliamReynish

hi,

the issue also occurs on the "Graph Editor" Crtl/CMD + Mouse wheel won't zoom to the mouse location, but '+'/'-' will do so.
I saw the fix occurred but don't know if it for all windows in the app.

thank you,
Nisim

hi, the issue also occurs on the "Graph Editor" Crtl/CMD + Mouse wheel won't zoom to the mouse location, but '+'/'-' will do so. I saw the fix occurred but don't know if it for all windows in the app. thank you, Nisim

This issue was referenced by c1b30e0ed1

This issue was referenced by c1b30e0ed1767852c5bce6b2b132859675547cef
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

hi,

I saw the issue set to "resolved", does the issue fixed?
I am using version 2.90.1 or 2.91.0 Beta and it still exists. mouse wheel zoom is not center on the mouse cursor but pressing '+'/'-' in Numpad does working. so it something only for the Mouse wheel zooming.

thanks,
Nisim

hi, I saw the issue set to "resolved", does the issue fixed? I am using version 2.90.1 or 2.91.0 Beta and it still exists. mouse wheel zoom is not center on the mouse cursor but pressing '+'/'-' in Numpad does working. so it something only for the Mouse wheel zooming. thanks, Nisim
Author
Member

@Nisim Check the current Blender 2.92.0 Alpha, does it work? It wasn't backported to 2.91.0 yet.

Also, what kind of mouse do you have, Magic Mouse? Because standard mice should have worked before.

@Nisim Check the current Blender 2.92.0 Alpha, does it work? It wasn't backported to 2.91.0 yet. Also, what kind of mouse do you have, Magic Mouse? Because standard mice should have worked before.

I checked in the latest 2.92 and it half working. zoom in does zoom close to the point the mouse is and zoom out still doing it from the center. unlike 3D Model panel which the zoom in/out is going to the mouse cursor location.
you can see in the screencast the issue with the default cube.
mouse zoom.mp4

I checked in the latest 2.92 and it half working. zoom in does zoom close to the point the mouse is and zoom out still doing it from the center. unlike 3D Model panel which the zoom in/out is going to the mouse cursor location. you can see in the screencast the issue with the default cube. [mouse zoom.mp4](https://archive.blender.org/developer/F9217607/mouse_zoom.mp4)
Author
Member

Yes, this is a different issue, should be fixed in D8684 D8685 D8686, you can follow #82006.

Yes, this is a different issue, should be fixed in [D8684](https://archive.blender.org/developer/D8684) [D8685](https://archive.blender.org/developer/D8685) [D8686](https://archive.blender.org/developer/D8686), you can follow #82006.

ok, thanks.
as long it known.

ok, thanks. as long it known.

This issue was referenced by d7b0ec9cb5

This issue was referenced by d7b0ec9cb5f30102caa435bebc78a089cdc49594

The Zoom by Mouse cursor is working now on Blender 2.91.0 (today build).
thank you for adding it.

The Zoom by Mouse cursor is working now on Blender 2.91.0 (today build). thank you for adding it.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78211
No description provided.